--- a/emfas-site/src/components/nav.css
+++ b/emfas-site/src/components/nav.css
@@ -1,31 +1,125 @@
-.nav{
+
+header{
     display: flex;
     width:100%;
-    position:relative;
+    position:fixed;
 }
 
-.Nav-logo {
-   margin-top: 2%;
-   margin-left:0.5%;
-   width:8%;
-   float:left
+header .nav-btn{
+    cursor:pointer;
+    background: transparent;
+    border: none;
+    outline: none;
+    color:grey;
+    position: fixed;
+	top: 8%;
+	right: 4%;
+    visibility: hidden;
+    opacity: 0;
 }
 
-.links{
-    
-    display:flex;
-    width:100%;
-    height:auto;
-    float:center;
+header nav{
     position: absolute;
-    bottom:0;
-    left:15.8%;
-   
+    top:50%;
+    height: 20%;
+    width: 100%;
+    display: flex;
+    float: center;
+    align-items: center;
+    justify-content: center;
 }
 
 a{
     display: flex;
     margin-right: 2%;
+    font-size: 25px;
+}
+
+a:link, a:visited{
+
+    text-decoration: none;
+    color: black;
+}
+
+a:hover{
+    background-color: #FF7A00;
+    padding:5px;
+}
+
+@media only screen and (max-width: 1024px){
+    header .nav-btn{
+        visibility: visible;
+        opacity: 1;
+
+    }
+
+    header nav{
+        position: fixed;
+		top: -200vh;
+		height: 20%;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+        align-items: center;
+        justify-content: center;
+		gap: 3%;
+        background-color: #1B1E62;
+        transform: translateY(200vh);
+        transition: all 0.3s ease-in;
+     
+    }
+
+    a{
+        margin-left: 5%;
+        width: 100%;
+        justify-content: left;
+       
+    }
+    a:link, a:visited{
+        color:#FF7A00;
+    }
+    a:hover{
+        color:white;
+        background-color: #FF7A00;
+    }
+    .links{
+    
+        display:flex;
+        width:100%;
+        height:100%;
+        float:center;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        bottom:0;
+       
+    }
+    
+    header .responsive_nav{
+        transform: none;
+    }
+ 
+    nav .nav-close-btn {
+		position: absolute;
+		top: 2rem;
+		right: 2rem;
+	}
+
+    nav .nav-bars {
+        visibility: hidden;
+        opacity: 0;
+	}
+
+
+
+    
+}
+
+.nav-logo {
+   margin-top: 2%;
+   margin-left:0.5%;
+   width:8%;
+   float:left
 }
 
 .rect1{
@@ -62,8 +156,10 @@ a{
     height: 15%;
     background-color: #FF7A00;
     position: absolute;
-    bottom: 7%;
-    left:15.8%;
+    bottom: 13.4%;
+    left:15.75%;
     margin-top:0.5%;
-    margin-bottom:0.5%;
+
 }
+
+
