--- a/emfas-site/src/components/nav.css
+++ b/emfas-site/src/components/nav.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Armata&display=swap");
+
 
 header{
     display: flex;
@@ -6,19 +8,12 @@ header{
 }
 
 header .nav-btn{
-    cursor:pointer;
-    background: transparent;
-    border: none;
-    outline: none;
-    color:grey;
-    position: fixed;
-	top: 8%;
-	right: 4%;
-    visibility: hidden;
+    visibility: none;
     opacity: 0;
 }
 
 header nav{
+    font-family: 'Armata';
     position: absolute;
     top:50%;
     height: 20%;
@@ -48,9 +43,20 @@ a:hover{
 
 @media only screen and (max-width: 1024px){
     header .nav-btn{
-        visibility: visible;
-        opacity: 1;
-
+    margin-left: auto;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    cursor:pointer;
+    background: transparent;
+    border: none;
+    outline: none;
+    color:grey;
+    margin-right: 1em;
+    height: auto;
+    width: 10%;
+    visibility: visible;
+    opacity: 1;
     }
 
     header nav{
@@ -64,7 +70,6 @@ a:hover{
         justify-content: center;
 		gap: 3%;
         background-color: #1B1E62;
-        transform: translateY(200vh);
         transition: all 0.3s ease-in;
      
     }
@@ -96,7 +101,7 @@ a:hover{
     }
     
     header .responsive_nav{
-        transform: none;
+        transform: translateY(200vh);
     }
  
     nav .nav-close-btn {
@@ -159,7 +164,6 @@ a:hover{
     bottom: 13.4%;
     left:15.75%;
     margin-top:0.5%;
-
 }
 
 
