--- a/emfas-site/src/components/nav.css
+++ b/emfas-site/src/components/nav.css
@@ -3,8 +3,8 @@
 
 header{
     display: flex;
-    width:100%;
-    position:fixed;
+    max-width:100%;
+    position:absolute;
 }
 
 header .nav-btn{
@@ -16,7 +16,7 @@ header nav{
     font-family: 'Armata';
     position: absolute;
     top:50%;
-    height: 20%;
+    min-height: 20%;
     width: 100%;
     display: flex;
     float: center;
