--- a/emfas-site/src/home.css
+++ b/emfas-site/src/home.css
@@ -1,4 +1,29 @@
-body{
-    position: absolute;
-    top: 50%;
+@import url("https://fonts.googleapis.com/css2?family=Armata&display=swap");
+
+.home{
+    
+    background-color: grey;
+    float: left;
+    max-width: 50%;
 }
+
+
+
+.title{
+    position:absolute;
+    display:inline;
+    top:5em;
+    padding-left: 10%;
+    text-align: center;
+    min-height: 100%;
+
+
+}
+
+
+
+.truck-img{
+    width: 25%;
+    padding-right: 10%;
+}
+
