--- a/emfas-site/src/pages/Home.css
+++ b/emfas-site/src/pages/Home.css
@@ -1,17 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Armata&display=swap");
 
 
+
 .block1{
-    
     display: flex;
-    top: 25%;
     width: 100%;
     max-width: 100%;
-    max-height: 20em;
     position: relative;
     line-height: 20em;
     margin: 0 auto;
     align-items: center;
+    position: relative;
+    margin-top: 3vh;
+  
 }
 
 .title-stats{
@@ -23,16 +24,18 @@
     line-height: normal;
     text-align: center;
     padding-left: 2em;
+    max-height: 20em;
+    max-width: 100%;
 }
 
 .title-stats h2{
-    font-size: 2em;
+    font-size: 2vw;
     font-family: Armata;
 }
 
 
 .title-stats h1{
-    font-size: 3em;
+    font-size: 3vw;
     font-family: Armata;
     color: #1B1E62;
     font-weight: bolder;
@@ -68,8 +71,133 @@
 }
 
 .truck{
-    max-width: 75%;
+    max-width: 50%;
     max-height: 100%;
     border-radius: 25px;
     border: 2px solid #1B1E62;
 }
+
+
+
+.block2{
+
+    background-color: #E8E8EF;
+    display: flex;
+    width: 65%;
+    max-width: 65%;
+    position: relative;
+    line-height: 20em;
+    margin: 0 auto;
+    align-items: center;
+    border-radius: 25px;
+    justify-content: center;
+    margin-top: 5em;
+    margin-bottom: 5em;
+
+   
+}
+
+
+.our-story{
+    display: inline-block;
+    max-width:50%;
+    line-height: normal;
+    padding-left: 2em;
+    padding-right: 1em;
+    max-height: 100%;
+    overflow: scroll;
+    position: relative;
+    
+}
+
+.our_story h1, p{
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.our-story h1{
+    color: #1B1E62;
+}
+
+
+.our-story-img{
+    position: relative;
+    display: inline-block;
+    min-height: 50%;
+    max-width:50%;
+    margin: 0 auto;
+    line-height: normal;
+    overflow: hidden;
+    
+}
+
+
+
+.story-img{
+    max-width: 100%;
+    border-radius: 0px 25px 25px 0px;
+}
+
+
+
+
+
+
+.block3{
+
+    background-color: #E8E8EF;
+    display: flex;
+    width: 65%;
+    max-width: 65%;
+    min-height: 30vh;
+    position: relative;
+    line-height: 20em;
+    margin: 0 auto;
+    align-items: center;
+    border-radius: 25px;
+    justify-content: center;
+    margin-top: 5em;
+    margin-bottom: 5em;
+   
+}
+
+
+.what-we-do{
+    display: inline-block;
+    max-width:50%;
+    line-height: normal;
+    padding-left: 2em;
+    padding-right: 1em;
+    max-height: 100%;
+    position: relative;
+    
+}
+
+.what-we-do h1, p{
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.what-we-do h1{
+    color: #1B1E62;
+}
+
+
+.what-we-do-img{
+    position: relative;
+    display: inline-block;
+    max-width:50%;
+    max-height: 100%;
+    line-height: normal;
+    overflow: hidden;   
+}
+
+
+.wwd-img{
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 25px 0px 0px 25px;
+}
+
+
+
