--- a/emfas-site/src/components/nav.css
+++ b/emfas-site/src/components/nav.css
@@ -1,9 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Armata&display=swap");
 
+*{
+    box-sizing: border-box;
+}
 
 header{
     display: flex;
     max-width:100%;
+    min-height: 20%;
     position:absolute;
 }
 
@@ -43,20 +47,20 @@ a:hover{
 
 @media only screen and (max-width: 1024px){
     header .nav-btn{
-    margin-left: auto;
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    cursor:pointer;
-    background: transparent;
-    border: none;
-    outline: none;
-    color:grey;
-    margin-right: 1em;
-    height: auto;
-    width: 10%;
-    visibility: visible;
-    opacity: 1;
+        margin-left: auto;
+        display: flex;
+        justify-content: right;
+        align-items: center;
+        cursor:pointer;
+        background: transparent;
+        border: none;
+        outline: none;
+        color:grey;
+        margin-right: 1em;
+        height: auto;
+        width: 10%;
+        visibility: visible;
+        opacity: 1;
     }
 
     header nav{
@@ -99,11 +103,10 @@ a:hover{
         position: fixed;
         bottom:0;
        
+       
     }
     
-    header .responsive_nav{
-        transform: translateY(200vh);
-    }
+   
  
     nav .nav-close-btn {
 		position: absolute;
@@ -116,16 +119,17 @@ a:hover{
         opacity: 0;
 	}
 
+    header .responsive_nav{
+        transform: translateY(200vh);
+    }
 
-
-    
 }
 
 .nav-logo {
    margin-top: 2%;
    margin-left:0.5%;
    width:8%;
-   float:left
+    
 }
 
 .rect1{
@@ -158,11 +162,64 @@ a:hover{
 
 .rect3{
     display:flex;
-    width: 100%;
+    min-width: 84.25%;
     height: 15%;
     background-color: #FF7A00;
     position: absolute;
     bottom: 13.4%;
     left:15.75%;
     margin-top:0.5%;
+}
+
+
+@media only screen and (max-width: 1024px){
+    
+    .rect1, .rect2, .rect3{
+        visibility: none;
+        opacity: 0;
+    }
+    
+    .nav{
+        background-color: #FF7A00;
+        display: flex;
+    }
+
+    .nav-logo {
+        display: inline-block;
+        margin:0.5%;
+        width:initial;
+        min-width: 8%;
+        max-width: 20%;
+        line-height: normal;
+
+    }
+     
+
+
+}
+
+
+@media only screen and (max-width: 400px){
+    .rect1, .rect2, .rect3{
+        visibility: none;
+        opacity: 0;
+    }
+    
+    .nav{
+        background-color: #FF7A00;
+        display: flex;
+    }
+
+    .nav-logo {
+        display: inline-block;
+        margin:0.5%;
+        width:initial;
+        min-width: 8%;
+        max-width: 20%;
+        line-height: normal;
+
+    }
+     
+
+
 }
