added some styling

--- a/emfas-site/src/pages/Join.css
+++ b/emfas-site/src/pages/Join.css
@@ -1,6 +1,6 @@
 
 
-.join-container{
+.join_container{
     height: 100%;
     width: 100%;
     margin: 0 auto;
@@ -30,4 +30,3 @@ h1{
     display: flex;
     float: right;
 }
-
