--- a/emfas-site/src/components/join_form.css
+++ b/emfas-site/src/components/join_form.css
@@ -1,6 +1,49 @@
 .container{
     display: flex;
-    height: 100vh;
-    width: 100 vw;
-    padding-right: 60px;
+    height: 100%;
+    width: 100%;
+
 }
+
+
+.container form{
+    padding-left: 700px;
+}
+
+
+.container label{
+    display:block;
+    font-size: large;
+    color:#1B1E62
+    
+    
+    
+}
+
+
+.container input{
+    border-radius: 25px;
+    border: none;
+    padding: 15px;
+    font-size: medium;
+    min-height: 30px;
+    min-width: 300px;
+    background-color: #D9D9D9;
+
+}
+
+
+.container button{
+    
+    border-radius: 25px;
+    background-color: #FF7A00;
+    font-size: large;
+    color:white;
+    border: none;
+    min-height: 30px;
+    min-width: 100px;
+    cursor: pointer;
+    
+    
+}
+
