fixed issue with footer not being displayed

--- a/emfas-site/src/App.css
+++ b/emfas-site/src/App.css
@@ -2,17 +2,17 @@
 
   position: absolute;
   margin: 0;
+  min-height: fit-content;
+  min-width: 100%;
+  display: flex;
+  justify-content: center;
   
-  height: 100%;
-  width: 100%;
-  
-  min-height: 100%;
-  max-width: 100%;
-  
-  }
+}
   
   .nav{
   
     position: relative;
   
   }
+
+
