--- a/emfas-site/src/components/footer.css
+++ b/emfas-site/src/components/footer.css
@@ -1,20 +1,20 @@
 .footer{
     margin: auto 0;
     text-align: center;
-    min-height: 10em;
-    min-width: 100%;
+    min-height: 6em;
+    width: 100%;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+     
 }
 
 
 .foot-links{
     display: flex;
     padding: 1em;
-    min-height: 10em;
+    min-height: 6em;
     justify-content: center;
     align-items: center;
   
@@ -32,10 +32,11 @@ ul{
   display: flex;
   margin: 0;
   text-align: center;
-  min-height: 10em; 
+  min-height: 6em; 
   padding: 1em;
   justify-content: center;
   align-items: center;
+
 
 }
 .contact h4{
