--- a/emfas-site/src/components/nav.css
+++ b/emfas-site/src/components/nav.css
@@ -19,8 +19,9 @@ header .nav-btn{
 header nav{
     font-family: 'Armata';
     position: absolute;
-    top:50%;
+    top:40%;
     min-height: 20%;
+    max-height: 20%;
     width: 100%;
     display: flex;
     float: center;
@@ -31,7 +32,7 @@ header nav{
 a{
     display: flex;
     margin-right: 2%;
-    font-size: 1em;
+    font-size: 2em;
 }
 
 a:link, a:visited{
