--- a/emfas-site/src/pages/Home.css
+++ b/emfas-site/src/pages/Home.css
@@ -99,6 +99,8 @@
     justify-content: center;
     margin-top: 5em;
     margin-bottom: 5em;
+    overflow:hidden;
+    height:18em;
 
    
 }
@@ -129,7 +131,7 @@
 .our-story-img{
     position: relative;
     display: inline-block;
-    min-height: 50%;
+    min-height: 100%;
     max-width:50%;
     margin: 0 auto;
     line-height: normal;
@@ -141,7 +143,6 @@
 
 .story-img{
     max-width: 100%;
-    border-radius: 0px 25px 25px 0px;
 }
 
 
@@ -159,6 +160,8 @@
     justify-content: center;
     margin-top: 5em;
     margin-bottom: 5em;
+    overflow: hidden;
+    height:18em;
    
 }
 
@@ -190,14 +193,13 @@
     max-width:50%;
     max-height: 100%;
     line-height: normal;
-    overflow: hidden;   
+
 }
 
 
 .wwd-img{
     max-width: 100%;
     max-height: 100%;
-    border-radius: 25px 0px 0px 25px;
 }
 
 
