--- a/emfas-site/src/pages/Donate.css
+++ b/emfas-site/src/pages/Donate.css
@@ -12,8 +12,6 @@ h1{
     margin-bottom:3em;
     display: flex;
     align-items: center;
-    border-radius: 45px;
-    
 
 }
 
@@ -91,6 +89,9 @@ h1{
 
 
 .donate-pg{
-    width: 100%;
+    display: flex;
+    flex-flow:column;
+    justify-content: center;
     position: relative;
 }
+
