--- a/emfas-site/src/pages/Donate.css
+++ b/emfas-site/src/pages/Donate.css
@@ -1,8 +1,3 @@
-h1{
-    text-align: center;
-    color: #1B1E62;
-    font-family: Armata;
-}
 
 
 
@@ -15,6 +10,12 @@ h1{
 
 }
 
+h1{
+    text-align: center;
+    color: #1B1E62;
+    font-family: Armata;
+}
+
 
 .contact-info{
 
@@ -24,9 +25,12 @@ h1{
     height: 100%;
     display: flex;
     justify-content: center;
-  
-  
-    
+   
+}
+
+.or{
+    width:20%;
+    text-align: center;
 }
 
 .contact-info .Address{
@@ -44,10 +48,7 @@ h1{
 }
 
 
-
-
 .paypal{
-
     width: 40%;
     padding: 2em;
     margin:3em;
@@ -93,5 +94,34 @@ h1{
     flex-flow:column;
     justify-content: center;
     position: relative;
+    
 }
+
+
+.donate-pg a{
+  
+    display: flex;
+    justify-content: center;
+    font-size: 1em;
+    width: 100%;
+
+}
+
+.donate-pg a:hover{
+    color: #FF7A00;
+}
+
+.donate-pg h3{
+    text-align: center;
+}
+
+.contact-vp{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3em;
+}
+
+
+
+
 
