--- a/emfas-site/src/pages/Home.css
+++ b/emfas-site/src/pages/Home.css
@@ -107,7 +107,7 @@
 }
 
 
-.our-story, .billing{
+.about-ems, .billing{
     display: inline-block;
     max-width:50%;
     line-height: normal;
@@ -124,12 +124,12 @@
    
 }
 
-.our-story h1{
+.about-ems h1{
     color: #1B1E62;
 }
 
 
-.our-story-img{
+.about-ems-img{
     padding:1em;
     position: relative;
     display: inline-block;
@@ -137,16 +137,16 @@
     max-width:50%;
     margin: 0 auto;
     line-height: normal;
-    overflow: hidden;
     
 }
 
 
 
-.story-img{
+.about-img{
     max-width: 100%;
     min-height: 100%;
-    border-radius: 10px;
+    padding: 1em;
+    border-radius: 25px;
 }
 
 
@@ -170,7 +170,7 @@
 }
 
 
-.what-we-do{
+.wmems{
     display: inline-block;
     max-width:50%;
     line-height: normal;
@@ -181,17 +181,17 @@
     
 }
 
-.what-we-do h1, p{
+.wmemsh1, p{
     max-height: 100%;
     max-width: 100%;
 }
 
-.what-we-do h1{
+.wmems h1{
     color: #1B1E62;
 }
 
 
-.what-we-do-img{
+.wmems-img{
     position: relative;
     display: inline-block;
     max-width:50%;
@@ -202,7 +202,7 @@
 }
 
 
-.wwd-img{
+.w-img{
     max-width: 100%;
     max-height: 100%;
     border-radius: 25px;
@@ -277,7 +277,7 @@
 
     }
 
-    .our-story, .billing{
+    .about-ems, .billing{
         display: inline-block;
         max-width: 100%;
         line-height: normal;
@@ -288,19 +288,19 @@
         
     }
 
-    .our-story p, .billing p{
+    .about-ems p, .billing p{
         max-height: 100%;
         max-width: 100%;
         font-size: .75em;
     
     }
 
-    .our-story h1{
+    .about-ems h1{
         color: #1B1E62;
     }
 
 
-    .our-story-img{
+    .about-ems-img{
         padding:1em;
         position: relative;
         display: inline-block;
@@ -314,10 +314,10 @@
 
 
 
-    .story-img{
+    .about-img{
         max-width: 100%;
         min-height: 100%;
-        border-radius: 10px;
+        border-radius: 25px;
     }
 
 
@@ -339,7 +339,7 @@
     }
 
 
-    .what-we-do{
+    .wmems{
         display: inline-block;
         max-width: 100%;
         line-height: normal;
@@ -351,35 +351,38 @@
         
     }
 
-    .what-we-do p{
+    .wmems p{
         max-height: 100%;
         max-width: 100%;
         font-size: .75em;
     }
 
-    .what-we-do h1{
+    .wmems h1{
         color: #1B1E62;
     }
 
 
-    .what-we-do-img{
-        order:2;
+    .wmems-img{
+        order: 2;
         padding:1em;
         position: relative;
-        display: inline-block;
+        display: flex;
+        justify-content: center;
         min-height: 100%;
-        max-width:100%;
+        max-width:90%;
         margin: 0 auto;
-        line-height: normal;
         overflow: hidden;
+        border-radius: 25px;
 
     }
 
 
-    .wwd-img{
+    
+    .w-img{
         max-width: 100%;
-        min-height: 100%;
+        max-height: 100%;
         border-radius: 25px;
+        padding: 1em;
     }
 
     .block4{
