--- a/emfas-site/src/pages/Donate.css
+++ b/emfas-site/src/pages/Donate.css
@@ -3,10 +3,11 @@
 
 .Donate{
     background-color: #E8E8EF;
-    height: 25em;
+    height: 30em;
     margin-bottom:3em;
     display: flex;
     align-items: center;
+
 
 }
 
@@ -93,8 +94,6 @@ h1{
     display: flex;
     flex-flow:column;
     justify-content: center;
-    position: relative;
-    
 }
 
 
@@ -123,5 +122,78 @@ h1{
 
 
 
+@media only screen and (max-width: 1024px){
+    .donate-pg{
+        max-width: 100%;
+        overflow: hidden;
+        max-height: fit-content;
+
+    }
+    .Donate{
+        max-width: 100%;
+        min-height: 60em;
+        display: flex;
+        flex-flow: column;
+        background-color: white;
+    }
+
+    .contact-info{
+
+        width: 100%;
+        margin-top: 0;
+        font-size: 1.10em;
+        padding-bottom: 0;
+        padding-top: 0;
+        height: 10em;
+        
+    }
 
 
+    .paypal{
+        width: 100%;
+        padding: 2em;
+        margin:3em;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items:center ;
+        margin-bottom: 0em;
+        height: 15em;
+    
+    }
+
+    .or{
+        margin-bottom: 0;
+
+    }
+
+    .img img{
+        position: relative;
+        max-width:80%;
+        max-height:50%;
+    }
+
+    .contact-vp{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 3em;
+        font-size: .85em;
+    }
+    
+
+
+
+}
+
+
+
+
+@media only screen and (max-width: 400px){
+    .contact-info{
+        font-size: 1em;
+    }
+
+    .contact-vp{
+        font-size: .75em;
+    }
+}
