--- a/emfas-site/src/components/accordion.css
+++ b/emfas-site/src/components/accordion.css
@@ -2,19 +2,17 @@
 
 .wrapper{
     display:flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 100 vw;
-    float: left;
-
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height:100%;
 
 }
 
 .accordion {
-    width: 600px;
     border-radius: 15px;
     overflow: hidden;
-
+    width:75%;
 }
 
 
