--- a/emfas-site/src/components/join_form.css
+++ b/emfas-site/src/components/join_form.css
@@ -1,13 +1,12 @@
-.container{
+.form-container{
     display: flex;
+    align-items: center;
+    width:100%;
     height: 100%;
-    max-width: 100%;
-
 }
 
 
-.container form{
-    padding-left: 650px;
+.form-container form{
     max-width: 100%;
 }
 
@@ -52,4 +51,3 @@
     align-items: center;
     
 }
-
