--- a/emfas-site/src/components/footer.css
+++ b/emfas-site/src/components/footer.css
@@ -7,6 +7,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding:1em;
+    padding-bottom:0;
 }
 
 .foot-links{
@@ -50,4 +52,3 @@ ul{
     margin:0;
   
 }
-
