--- a/emfas-site/src/pages/Home.css
+++ b/emfas-site/src/pages/Home.css
@@ -376,8 +376,6 @@
 
     }
 
-
-    
     .w-img{
         max-width: 100%;
         max-height: 100%;
@@ -403,9 +401,12 @@
     
     }
 
+}
 
+@media only screen and (max-width: 400px){
 
-
-
+    .block1 th, td{
+        font-size: .75em;
+    }    
 }
 
