fixed a padding issue in join page

--- a/emfas-site/src/components/accordion.css
+++ b/emfas-site/src/components/accordion.css
@@ -52,14 +52,11 @@
     .wrapper{
         height: max-content;
     }
-   
     .item{
         padding-top:0;
-        padding-bottom:0;
+        padding-bottom:.5em;
     }
-
     .content.show{
         max-height: 9999px;
-        padding-bottom:0.5em;
     }
 }
