--- a/emfas-site/src/App.css
+++ b/emfas-site/src/App.css
@@ -3,11 +3,9 @@
 
   margin: 0;
   min-height: 100%;
-  display: flex;
-  justify-content: center;
   min-width:100%;
-  overflow: hidden;
-  
+  overflow: scroll;
+
 }
   
 .nav{
@@ -19,5 +17,4 @@
 .foot{
   width:100%;
   position: absolute;
-
 }
