--- a/emfas-site/src/components/nav.css
+++ b/emfas-site/src/components/nav.css
@@ -22,11 +22,12 @@ header nav{
     top:40%;
     min-height: 20%;
     max-height: 20%;
-    width: 100%;
+    min-width: 100%;
     display: flex;
     float: center;
     align-items: center;
     justify-content: center;
+    font-size: .8em;
 }
 
 a{
