--- a/emfas-site/src/pages/Officers.css
+++ b/emfas-site/src/pages/Officers.css
@@ -1,38 +1,120 @@
 
 .officers-pg{
-    display: flex;
-    flex-flow:column;
-    justify-content: center;
+   
+   min-width:100%;
+   display: flex;
+   flex-flow:column;
+   justify-content: center;
+   align-items: center;
+   
+   
 }
 
-
-
-
 .officer-table th{
+    max-width:33%;
     text-align: left;
     padding:1em;
-
+    padding-left: 2em;
+    font-family: Armata;
+    color: #1B1E62;
 }
 
 .officer-table td{
-    text-align: center;
+    text-align: left;
     padding:1em;
+    padding-left: 2em;
+    max-width: 33%;
 
 }
 
 
 .officer-table a{
     font-size: 1em;
-    display: flex;
-    justify-content: center;
 
 }
 
-.officer-table{
+
+.officer-table {
     background-color: #E8E8EF;
+    max-width: 100%;
+    min-width: 100%;
     border-radius: 25px 25px 0px 0px;
 }
 
-.flag-truck{
+.officers img{
+    min-width:100%;
     border-radius: 0px 0px 25px 25px;
+}
+
+.officers{
+    display: table;
+    max-width:50%;
+}
+
+@media only screen and (max-width: 1024px){
+    .officers-pg{
+        font-size: 0.75em;
+    }
+    .officers{
+        display:flex;
+        justify-content: center;
+        flex-flow:column;
+        align-items: center;
+        max-width: 90%;
+    }
+
+    .officer-table{
+        max-width:100%;
+        overflow: scroll;
+    }
+
+    .officers img{
+        max-width: 90%;
+    }
+
+    .officer-table th{
+        max-width:33%;
+        text-align: left;
+      
+        padding: 1em;
+        font-family: Armata;
+        color: #1B1E62;
+    }
+    
+    .officer-table td{
+        text-align: left;
+        padding-left: 0.5em;
+   
+    }
+
+}
+
+@media only screen and (max-width: 520px){
+
+    .officers-pg{
+        font-size: 0.70em;
+    }
+    .officers{
+        min-width: 90%;
+    }
+
+    .officer-table{
+        max-width:100%;
+        overflow: scroll;
+    }
+
+    .officer-table th{
+        min-width:33%;
+        text-align: left;
+        font-size: .65em;
+        padding: 1em;
+        font-family: Armata;
+        color: #1B1E62;
+    }
+    
+    .officer-table td{
+        text-align: left;
+        padding-left: 0.5em;
+        font-size: .70em;    
+    }
 }
