--- a/emfas-site/src/pages/Donate.css
+++ b/emfas-site/src/pages/Donate.css
@@ -186,7 +186,7 @@ h1{
 
 
 
-@media only screen and (max-width: 400px){
+@media only screen and (max-width: 420px){
     .contact-info{
         font-size: 1em;
     }
@@ -196,4 +196,19 @@ h1{
     .contact-vp{
         font-size: .75em;
     }
+}
+
+
+@media only screen and (max-width: 420px){
+ 
+    .Address{
+        font-size: .8em;
+        width:100%;
+    }
+    .or{
+        width:100%;
+        text-align: center;
+    }
+
+
 }
