fixed zoom issues on edit page slightly, still not perfect

--- a/emfas-site/src/pages/edit_officer.css
+++ b/emfas-site/src/pages/edit_officer.css
@@ -30,8 +30,8 @@
     border: none;
     padding: 15px;
     font-size: medium;
-    min-height: 10px;
-    min-width: 50px;
+   
+    max-width: 15%;
     background-color: #D9D9D9;
 
 }
@@ -46,8 +46,8 @@
     font-size: large;
     color:white;
     border: none;
-    min-height: 30px;
-    min-width: 100px;
+    min-height: 20px;
+    max-width: 100px;
     cursor: pointer;
     margin: .5em;
   
