--- a/emfas-site/src/pages/edit_officer.css
+++ b/emfas-site/src/pages/edit_officer.css
@@ -14,6 +14,7 @@
 }
 
 .officers-form li{
+    width: 100%;
     margin: 1em;
 }
 
@@ -35,9 +36,6 @@
     background-color: #D9D9D9;
 
 }
-
-
-
 
 .rm-button{
 
