changed footer font size for mobile

--- a/emfas-site/src/styles/Officers.css
+++ b/emfas-site/src/styles/Officers.css
@@ -61,6 +61,7 @@
         flex-flow:column;
         align-items: center;
         max-width: 90%;
+        min-height: 100%;
     }
 
     .officer-table{
