--- a/emfas-site/src/styles/weather.css
+++ b/emfas-site/src/styles/weather.css
@@ -45,14 +45,23 @@
     outline: none;
     color:grey;
     height: auto;
-
-
-    visibility: visible;
-    opacity: 1;
-   
-    border: none;
-    outline: none;
 }
+
+
+
+.more-details a{
+    margin-top:.5em;
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-size: 1em;
+    font-weight: bolder;
+}
+
+.more-details a:hover{
+    color:grey
+}
+
 
 @media only screen and (max-width: 1024px){
 
