--- a/emfas-site/src/styles/weather.css
+++ b/emfas-site/src/styles/weather.css
@@ -12,7 +12,7 @@
 }
 
 .w-info{
-    padding: 1em;
+    padding: .5em;
     display: flex;
     flex-flow: column;
     width: 70%;
@@ -56,6 +56,7 @@
     color: white;
     font-size: 1em;
     font-weight: bolder;
+    padding:.5em;
 }
 
 .more-details a:hover{
