--- a/emfas-site/src/styles/join_form.css
+++ b/emfas-site/src/styles/join_form.css
@@ -32,6 +32,7 @@
     min-height: 30px;
     min-width: 300px;
     background-color: #D9D9D9;
+    filter: drop-shadow(.1em .1em .05em grey );
 
 }
 
@@ -49,6 +50,7 @@
     margin:20px auto;
     justify-content: center;
     align-items: center;
+    filter: drop-shadow(.1em .1em .05em grey );
     
 }
 
