--- a/emfas-site/src/styles/Join.css
+++ b/emfas-site/src/styles/Join.css
@@ -1,9 +1,8 @@
 
 
 .join-container{
-    height: max-content;
     width: 100%;
-    height:max-content;
+    max-height: 100%;
     margin: 0 auto;
 
 }
@@ -11,7 +10,6 @@
 .join-title{
     display: inline-block;
     width: 100%;
-    font-family: armata;
 }
 h1{
     text-align: center;
