--- a/emfas-site/src/styles/Officers.css
+++ b/emfas-site/src/styles/Officers.css
@@ -45,6 +45,7 @@
     min-width: 100%;
     border-radius: 25px 25px 0px 0px;
     filter: drop-shadow(.1em .1em .25em grey );
+    backdrop-filter: blur(0);
 
 
 }
@@ -53,6 +54,7 @@
     min-width:100%;
     border-radius: 0px 0px 25px 25px;
     filter: drop-shadow(.1em .1em .25em grey );
+    backdrop-filter: blur(0);
 
 }
 
