--- a/emfas-site/src/styles/accordion.css
+++ b/emfas-site/src/styles/accordion.css
@@ -15,6 +15,7 @@
     height:max-content;
     max-height: 100%;
     filter: drop-shadow(0em .1em .1em grey );
+    backdrop-filter: blur(0);
 }
 
 
