--- a/emfas-site/src/styles/join_form.css
+++ b/emfas-site/src/styles/join_form.css
@@ -33,6 +33,7 @@
     min-width: 300px;
     background-color: #D9D9D9;
     filter: drop-shadow(.1em .1em .05em grey );
+    backdrop-filter: blur(0);
 
 }
 
@@ -51,6 +52,7 @@
     justify-content: center;
     align-items: center;
     filter: drop-shadow(.1em .1em .05em grey );
+    backdrop-filter: blur(0);
     
 }
 
