started home edit page, tweaked some things

--- a/emfas-site/src/styles/weather.css
+++ b/emfas-site/src/styles/weather.css
@@ -69,7 +69,7 @@
 @media only screen and (max-width: 1024px){
 
     .weatherAlert{
-        text-align: initial;
+        text-align: center;
         
     }
     .w-info{
