--- a/emfas-site/src/styles/nav.css
+++ b/emfas-site/src/styles/nav.css
@@ -109,10 +109,15 @@ a:link, a:visited{
         outline: none;
         color:grey;
         margin-right: 1em;
-        height: auto;
         width: 10%;
         visibility: visible;
         opacity: 1;
+    }
+
+    header .nav-btn #burger,   header .nav-btn #burger#x{
+        width: 75%;
+        height:50%;
+
     }
 
 
