--- a/emfas-site/src/App.css
+++ b/emfas-site/src/App.css
@@ -5,7 +5,6 @@
   min-height: 100%;
   min-width:100%;
  
-
 }
   
 .nav{
@@ -14,7 +13,10 @@
 }
 
 
-.foot{
+.container .foot{
   width:100%;
-  position: absolute;
+  bottom: 0;
+
+
 }
+
