--- a/emfas-site/src/styles/Donate.css
+++ b/emfas-site/src/styles/Donate.css
@@ -27,6 +27,7 @@ h1{
 
     display: flex;
     justify-content: center;
+ 
    
 }
 
@@ -48,6 +49,13 @@ h1{
 
 .contact-info .Address h3{
     text-align: center;
+}
+
+.contact-info .Address p{
+    text-align: center;
+    width:90%;
+    line-height: 2;
+    display: block;
 }
 
 
