--- a/emfas-site/src/styles/Join.css
+++ b/emfas-site/src/styles/Join.css
@@ -23,7 +23,9 @@ h1{
 }
 
 .join-info{
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width:40%;
 }
 
